# kaggle_cmi_2025

./: .gitignore  1D_CNN.py  3_LSTM.py  3_infer.py  4_LSTM_THM.py  4_infer.py  7_lstm.py  README.md  multi_sensor.py  multi_sensor_inference.py  pyproject.toml
LGBM/: 1_LGBM.py  1_LGBM_THM.py  2_LGBM_FeatureEngineer.py  lgbw_inference.py
LGBM/lgbm_thm/: meta.json
LGBM/outputs_lgbm/: meta.json  submission_inference.csv
LGBM/outputs_lgbm_thm/: meta.json  submission_inference.csv
multi_data_result/: cnn1d_fold1.pt
notebooks/: a_ema_model-feature.py  c_cmi-solution-v28.py  d_5fold-single-model-feature.py  d_5fold-single-model.py
