[project]
name = "kaggle-cmi-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=1.7.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
